calendar all done

--- a/pages/database.html
+++ b/pages/database.html
@@ -199,6 +199,11 @@
                             </div>
                             
                             <div class="form-group">
+                                <label for="preparedPages">Hazırlanan Sayfa Sayısı</label>
+                                <input type="number" id="preparedPages" name="preparedPages" min="0" step="1" placeholder="0">
+                            </div>
+                            
+                            <div class="form-group">
                                 <label for="journalPdf">PDF Yükle:</label>
                                 <div class="file-upload-area">
                                     <input type="file" id="journalPdf" name="journalPdf" accept=".pdf" style="display: none;">
