calendar coloring, dropdown

--- a/pages/database.html
+++ b/pages/database.html
@@ -253,6 +253,33 @@
                     </button>
                 </div>
 
+                <!-- Etkinlik Türü Renk Açıklaması -->
+                <div class="calendar-legend">
+                    <div class="legend-title">Etkinlik Türleri</div>
+                    <div class="legend-items">
+                        <div class="legend-item">
+                            <div class="legend-color event-toplanti"></div>
+                            <span>Toplantı</span>
+                        </div>
+                        <div class="legend-item">
+                            <div class="legend-color event-sosyal"></div>
+                            <span>Sosyal Etkinlik</span>
+                        </div>
+                        <div class="legend-item">
+                            <div class="legend-color event-workshop"></div>
+                            <span>Workshop</span>
+                        </div>
+                        <div class="legend-item">
+                            <div class="legend-color event-ders"></div>
+                            <span>Ders</span>
+                        </div>
+                        <div class="legend-item">
+                            <div class="legend-color event-sunum"></div>
+                            <span>Sunum</span>
+                        </div>
+                    </div>
+                </div>
+
                 <!-- Calendar Grid -->
                 <div class="calendar-grid">
                     <!-- Days of Week -->
