--- a/pages/database.html
+++ b/pages/database.html
@@ -474,6 +474,9 @@
         </div>
     </div>
 
+    <!-- Toast Notification Container -->
+    <div class="toast-container" id="toastContainer"></div>
+
     <script src="../assets/js/backend-api.js"></script>
     <script src="../assets/js/database-script.js"></script>
     <script src="../assets/js/global-features.js"></script>
