--- a/pages/database.html
+++ b/pages/database.html
@@ -112,6 +112,10 @@
                 <i class="fas fa-tools nav-icon"></i>
                 <span>Atölyeler</span>
             </a>
+            <a href="canvas.html" class="nav-item">
+                <i class="fas fa-paint-brush nav-icon"></i>
+                <span>Kanvas</span>
+            </a>
             
             <!-- Admin Only Section -->
             <div class="admin-section admin-only">
