profile styling and admin panel fix

--- a/pages/archive.html
+++ b/pages/archive.html
@@ -50,7 +50,7 @@
                     </div>
                     <div class="dropdown-option" data-mode="admin">
                         <i class="fas fa-cog"></i>
-                        <span>Admin Paneli</span>
+                        <span>Yönetici Modu</span>
                     </div>
                 </div>
             </div>
