--- a/pages/database.html
+++ b/pages/database.html
@@ -58,7 +58,7 @@
                     </div>
                     <div class="dropdown-option" data-mode="admin">
                         <i class="fas fa-cog"></i>
-                        <span>Admin Paneli</span>
+                        <span>Yönetici Modu</span>
                     </div>
                 </div>
             </div>
@@ -425,7 +425,7 @@
             </div>
             <div class="modal-body">
                 <p class="protocol-description">
-                    Admin paneline erişim için protokol şifresini girin:
+                    Yönetici Moduna erişim için protokol şifresini girin:
                 </p>
                 <div class="password-field">
                     <input type="password" id="protocolPassword" placeholder="Protokol şifresi..." maxlength="20">
