--- a/pages/awards.html
+++ b/pages/awards.html
@@ -69,7 +69,7 @@
                     </div>
                     <div class="dropdown-option" data-mode="admin">
                         <i class="fas fa-cog"></i>
-                        <span>Admin Paneli</span>
+                        <span>Yönetici Modu</span>
                     </div>
                 </div>
             </div>
