nex-feed, styling, bugfixes

--- a/pages/archive.html
+++ b/pages/archive.html
@@ -76,7 +76,7 @@
     <!-- Side Panel -->
     <div class="side-panel" id="sidePanel">
         <nav class="side-nav">
-            <a href="database.html" class="nav-item">
+            <a href="database.html" class="nav-item active">
                 <i class="fas fa-home nav-icon"></i>
                 <span>Ana Sayfa</span>
             </a>
@@ -92,7 +92,7 @@
                 <i class="fas fa-user-tie nav-icon"></i>
                 <span>Yönetim Kadrosu</span>
             </a>
-            <a href="archive.html" class="nav-item active">
+            <a href="archive.html" class="nav-item">
                 <i class="fas fa-archive nav-icon"></i>
                 <span>Arşiv</span>
             </a>
@@ -103,6 +103,14 @@
             <a href="workshops.html" class="nav-item">
                 <i class="fas fa-tools nav-icon"></i>
                 <span>Atölyeler</span>
+            </a>
+            <a href="canvas.html" class="nav-item">
+                <i class="fas fa-paint-brush nav-icon"></i>
+                <span>Kanvas</span>
+            </a>
+            <a href="nex-feed.html" class="nav-item">
+                <i class="fas fa-comments nav-icon"></i>
+                <span>NEX Feed</span>
             </a>
             
             <!-- Admin Only Section -->
