--- a/pages/members.html
+++ b/pages/members.html
@@ -75,11 +75,11 @@
     <!-- Side Panel -->
     <div class="side-panel" id="sidePanel">
         <nav class="side-nav">
-            <a href="database.html" class="nav-item">
+            <a href="database.html" class="nav-item active">
                 <i class="fas fa-home nav-icon"></i>
                 <span>Ana Sayfa</span>
             </a>
-            <a href="members.html" class="nav-item active">
+            <a href="members.html" class="nav-item">
                 <i class="fas fa-users nav-icon"></i>
                 <span>Üyeler</span>
             </a>
@@ -102,6 +102,14 @@
             <a href="workshops.html" class="nav-item">
                 <i class="fas fa-tools nav-icon"></i>
                 <span>Atölyeler</span>
+            </a>
+            <a href="canvas.html" class="nav-item">
+                <i class="fas fa-paint-brush nav-icon"></i>
+                <span>Kanvas</span>
+            </a>
+            <a href="nex-feed.html" class="nav-item">
+                <i class="fas fa-comments nav-icon"></i>
+                <span>NEX Feed</span>
             </a>
             
             <!-- Admin Only Section -->
