--- a/pages/awards.html
+++ b/pages/awards.html
@@ -95,7 +95,7 @@
     <!-- Side Panel -->
     <div class="side-panel" id="sidePanel">
         <nav class="side-nav">
-            <a href="database.html" class="nav-item">
+            <a href="database.html" class="nav-item active">
                 <i class="fas fa-home nav-icon"></i>
                 <span>Ana Sayfa</span>
             </a>
@@ -115,13 +115,21 @@
                 <i class="fas fa-archive nav-icon"></i>
                 <span>Arşiv</span>
             </a>
-            <a href="awards.html" class="nav-item active">
+            <a href="awards.html" class="nav-item">
                 <i class="fas fa-trophy nav-icon"></i>
                 <span>NEX Awards</span>
             </a>
             <a href="workshops.html" class="nav-item">
                 <i class="fas fa-tools nav-icon"></i>
                 <span>Atölyeler</span>
+            </a>
+            <a href="canvas.html" class="nav-item">
+                <i class="fas fa-paint-brush nav-icon"></i>
+                <span>Kanvas</span>
+            </a>
+            <a href="nex-feed.html" class="nav-item">
+                <i class="fas fa-comments nav-icon"></i>
+                <span>NEX Feed</span>
             </a>
             
             <!-- Admin Only Section -->
