--- a/pages/database.html
+++ b/pages/database.html
@@ -116,6 +116,10 @@
                 <i class="fas fa-paint-brush nav-icon"></i>
                 <span>Kanvas</span>
             </a>
+            <a href="nex-feed.html" class="nav-item">
+                <i class="fas fa-comments nav-icon"></i>
+                <span>NEX Feed</span>
+            </a>
             
             <!-- Admin Only Section -->
             <div class="admin-section admin-only">
