--- a/pages/management.html
+++ b/pages/management.html
@@ -74,7 +74,7 @@
     <!-- Side Panel -->
     <div class="side-panel" id="sidePanel">
         <nav class="side-nav">
-            <a href="database.html" class="nav-item">
+            <a href="database.html" class="nav-item active">
                 <i class="fas fa-home nav-icon"></i>
                 <span>Ana Sayfa</span>
             </a>
@@ -86,7 +86,7 @@
                 <i class="fas fa-user-friends nav-icon"></i>
                 <span>Takımlar</span>
             </a>
-            <a href="management.html" class="nav-item active">
+            <a href="management.html" class="nav-item">
                 <i class="fas fa-user-tie nav-icon"></i>
                 <span>Yönetim Kadrosu</span>
             </a>
@@ -101,6 +101,14 @@
             <a href="workshops.html" class="nav-item">
                 <i class="fas fa-tools nav-icon"></i>
                 <span>Atölyeler</span>
+            </a>
+            <a href="canvas.html" class="nav-item">
+                <i class="fas fa-paint-brush nav-icon"></i>
+                <span>Kanvas</span>
+            </a>
+            <a href="nex-feed.html" class="nav-item">
+                <i class="fas fa-comments nav-icon"></i>
+                <span>NEX Feed</span>
             </a>
             
             <!-- Admin Only Section -->
