about, prompt fixes

--- a/pages/profile.html
+++ b/pages/profile.html
@@ -247,6 +247,34 @@
                     </div>
                 </div>
                 
+                <!-- Hakkında Bölümü -->
+                <div class="profile-about-section" id="profileAboutSection" style="display: none;">
+                    <div class="about-header">
+                        <h3 class="section-title">
+                            <i class="fas fa-info-circle"></i>
+                            Hakkında
+                        </h3>
+                        <button type="button" class="about-edit-btn" id="aboutEditBtn" style="display: none;">
+                            <i class="fas fa-edit"></i>
+                            Düzenle
+                        </button>
+                    </div>
+                    <div class="about-text" id="aboutText"></div>
+                    <div class="about-edit" id="aboutEditContainer" style="display: none;">
+                        <textarea id="aboutEditField" rows="6" placeholder="Kendiniz hakkında kısa bir açıklama yazın..."></textarea>
+                        <div class="about-edit-actions">
+                            <button type="button" class="about-save-btn" id="aboutSaveBtn">
+                                <i class="fas fa-save"></i>
+                                Kaydet
+                            </button>
+                            <button type="button" class="about-cancel-btn" id="aboutCancelBtn">
+                                <i class="fas fa-times"></i>
+                                İptal
+                            </button>
+                        </div>
+                    </div>
+                </div>
+                
                 <!-- Profil Detay Bilgileri -->
                 <div class="profile-details">
                 </div>
