--- a/pages/profile.html
+++ b/pages/profile.html
@@ -114,6 +114,10 @@
                 <i class="fas fa-flask nav-icon"></i>
                 <span>Araştırma Alanları</span>
             </a>
+            <a href="#" class="nav-item" data-section="works">
+                <i class="fas fa-newspaper nav-icon"></i>
+                <span>Projeler ve Çalışmalar</span>
+            </a>
             <a href="#" class="nav-item" data-section="membership">
                 <i class="fas fa-id-card nav-icon"></i>
                 <span>Üyelik Bilgileri</span>
