--- a/pages/members.html
+++ b/pages/members.html
@@ -295,21 +295,12 @@
                             <label for="am_phone">Telefon</label>
                             <input id="am_phone" type="text" name="phone" placeholder="Örn: 05xx xxx xx xx">
                         </div>
-                        <div class="form-group" style="flex:1;">
-                            <label for="am_photo_url">Fotoğraf URL</label>
-                            <input id="am_photo_url" type="url" name="photo_url" placeholder="https://...">
-                        </div>
                     </div>
                     <div class="form-row" style="gap:12px;">
                         <div class="form-group" style="flex:1;">
-                            <label for="am_role">Rol (role)</label>
+                            <label for="am_role">Rol</label>
                             <select id="am_role" name="role">
                                 <option value="user">user</option>
-                                <option value="active">active</option>
-                                <option value="inactive">inactive</option>
-                                <option value="honorary">honorary</option>
-                                <option value="active_alumni">active_alumni</option>
-                                <option value="passive_alumni">passive_alumni</option>
                                 <option value="admin">admin</option>
                             </select>
                         </div>
@@ -320,17 +311,16 @@
                         <div class="form-group" style="flex:1;">
                             <label for="am_status">Durum (status)</label>
                             <select id="am_status" name="status">
-                                <option value="active">Aktif Öğrenci</option>
-                                <option value="inactive">Pasif Öğrenci</option>
+                                <option value="Aktif Öğrenci">Aktif Öğrenci</option>
+                                <option value="Pasif Öğrenci">Pasif Öğrenci</option>
                             </select>
                         </div>
                     </div>
                     <div class="form-row" style="gap:12px;">
                         <div class="form-group" style="flex:1;">
-                            <label for="am_title_prefix">Ünvan (title_prefix)</label>
+                            <label for="am_title_prefix">Ünvan</label>
                             <select id="am_title_prefix" name="title_prefix">
                                 <option value="">Ünvan Seçin</option>
-                                <option value="">-</option>
                                 <option value="Prof. Dr.">Prof. Dr.</option>
                                 <option value="Doç. Dr.">Doç. Dr.</option>
                                 <option value="Dr. Öğr. Üyesi">Dr. Öğr. Üyesi</option>
