new settings page

--- a/pages/profile.html
+++ b/pages/profile.html
@@ -956,7 +956,7 @@
 
     <!-- Profile Dropdown -->
     <div class="profile-dropdown" id="profileDropdown">
-        <a href="#" class="dropdown-item">
+        <a href="settings.html" class="dropdown-item">
             <i class="fas fa-cog dropdown-icon"></i>
             <span>Ayarlar</span>
         </a>
