--- a/pages/archive.html
+++ b/pages/archive.html
@@ -183,7 +183,7 @@
             <i class="fas fa-user dropdown-icon"></i>
             <span>Profil</span>
         </a>
-        <a href="#" class="dropdown-item">
+        <a href="settings.html" class="dropdown-item">
             <i class="fas fa-cog dropdown-icon"></i>
             <span>Ayarlar</span>
         </a>
