styling, new journal about

--- a/pages/archive.html
+++ b/pages/archive.html
@@ -106,7 +106,7 @@
             </a>
             <a href="canvas.html" class="nav-item">
                 <i class="fas fa-paint-brush nav-icon"></i>
-                <span>Kanvas</span>
+                <span>Canvas</span>
             </a>
             <a href="nex-feed.html" class="nav-item">
                 <i class="fas fa-comments nav-icon"></i>
@@ -114,8 +114,12 @@
             </a>
             
             <!-- Admin Only Section -->
-            <div class="admin-section">
+            <div class="admin-section admin-only">
                 <div class="admin-divider"></div>
+                <a href="#" class="nav-item admin-only" id="consoleToggle">
+                    <i class="fas fa-terminal nav-icon" style="color: #8b5cf6;"></i>
+                    <span>Konsol</span>
+                </a>
                 <a href="reports.html" class="nav-item admin-only">
                     <i class="fas fa-chart-bar nav-icon"></i>
                     <span>Raporlar</span>
