--- a/pages/management.html
+++ b/pages/management.html
@@ -104,7 +104,7 @@
             </a>
             <a href="canvas.html" class="nav-item">
                 <i class="fas fa-paint-brush nav-icon"></i>
-                <span>Kanvas</span>
+                <span>Canvas</span>
             </a>
             <a href="nex-feed.html" class="nav-item">
                 <i class="fas fa-comments nav-icon"></i>
