--- a/pages/profile.html
+++ b/pages/profile.html
@@ -323,6 +323,14 @@
                     </div>
                 </div>
                 
+                <!-- Add About Section Button (visible when about section is empty) -->
+                <div class="add-about-section" id="addAboutSection" style="display: none;">
+                    <button type="button" class="add-about-btn" id="addAboutBtn">
+                        <i class="fas fa-plus"></i>
+                        <span>Hakkında Bölümü Ekle</span>
+                    </button>
+                </div>
+                
                 <!-- Hakkında Bölümü -->
                 <div class="profile-about-section" id="profileAboutSection" style="display: none;">
                     <div class="about-header">
