--- a/pages/settings.html
+++ b/pages/settings.html
@@ -19,11 +19,6 @@
     <div class="top-panel">
         <!-- Sol Taraf -->
         <div class="left-section">
-            <button type="button" class="hamburger-btn" id="hamburgerBtn">
-                <span></span>
-                <span></span>
-                <span></span>
-            </button>
             <div class="logo-section" onclick="window.location.href='database.html'" style="cursor: pointer;">
                 <img src="../assets/images/logo.png" alt="NEX Logo" class="top-logo">
                 <div class="logo-text">
@@ -73,7 +68,7 @@
             <div class="profile-dropdown" id="profileDropdown">
                 <a href="profile.html" class="dropdown-item">
                     <i class="fas fa-user dropdown-icon"></i>
-                    <span>Profilim</span>
+                    <span>Profil</span>
                 </a>
                 <hr class="dropdown-divider">
                 <a href="#" class="dropdown-item logout" onclick="logout(); return false;">
@@ -98,7 +93,7 @@
                             <i class="fas fa-cog"></i>
                             Ayarlar
                         </h1>
-                        <p>Hesap bilgilerinizi yönetin ve güvenlik ayarlarınızı düzenleyin</p>
+                        <p>Hesap bilgilerinizi yönetin ve güvenlik ayarlarınızı düzenleyin.</p>
                     </div>
                 </div>
             </div>
@@ -113,7 +108,7 @@
                             <span>E-posta Değişimi</span>
                         </div>
                         <div class="section-subtitle">
-                            Hesabınızla ilişkilendirilmiş e-posta adresini değiştirin
+                            Hesabınızla ilişkilendirilmiş e-posta adresini değiştirin.
                         </div>
                     </div>
                     
@@ -207,7 +202,7 @@
                             <span>Şifre Değişimi</span>
                         </div>
                         <div class="section-subtitle">
-                            Hesabınızın güvenliği için şifrenizi düzenli olarak değiştirin
+                            Hesabınızın güvenliği için şifrenizi düzenli olarak değiştirin.
                         </div>
                     </div>
                     
