new agno profile

--- a/pages/management.html
+++ b/pages/management.html
@@ -112,7 +112,7 @@
             </a>
             
             <!-- Admin Only Section -->
-            <div class="admin-section">
+            <div class="admin-section admin-only">
                 <div class="admin-divider"></div>
                 <a href="reports.html" class="nav-item admin-only">
                     <i class="fas fa-chart-bar nav-icon"></i>
