--- a/pages/profile.html
+++ b/pages/profile.html
@@ -331,6 +331,23 @@
                     </button>
                 </div>
                 
+                <!-- AGNO Bölümü -->
+                <div class="profile-agno-section" id="profileAgnoSection" style="display: none;">
+                    <div class="agno-container">
+                        <div class="agno-icon">
+                            <i class="fas fa-chart-line"></i>
+                        </div>
+                        <div class="agno-content">
+                            <span class="agno-label">AGNO</span>
+                            <div class="agno-value">
+                                <span class="agno-score" id="agnoScore">0.00</span>
+                                <span class="agno-max">/4.00</span>
+                            </div>
+                        </div>
+                        <div class="agno-indicator" id="agnoIndicator"></div>
+                    </div>
+                </div>
+
                 <!-- Hakkında Bölümü -->
                 <div class="profile-about-section" id="profileAboutSection" style="display: none;">
                     <div class="about-header">
